change to build the fetch transactions for user account and individual transaction api and some other refactoring
