# src/main/java/com/justin/eagle/bank/rest/controller/V1ApiController.java
@@ -2,12 +2,11 @@ package com.justin.eagle.bank.rest.controller;
 
 import java.util.List;
 
-import com.justin.eagle.bank.account.AccountCrudService;
+import com.justin.eagle.bank.account.AccountService;
 import com.justin.eagle.bank.auth.AuthenticateUserService;
 import com.justin.eagle.bank.domain.ActiveAccount;
 import com.justin.eagle.bank.domain.ApprovedTransaction;
 import com.justin.eagle.bank.domain.PendingAccount;
-import com.justin.eagle.bank.domain.Transaction;
 import com.justin.eagle.bank.domain.TransactionRequest;
 import com.justin.eagle.bank.generated.openapi.rest.api.V1Api;
 import com.justin.eagle.bank.generated.openapi.rest.model.BankAccountResponse;
@@ -24,8 +23,8 @@ import com.justin.eagle.bank.generated.openapi.rest.model.UserResponse;
 import com.justin.eagle.bank.rest.mappers.AccountMapper;
 import com.justin.eagle.bank.rest.mappers.TransactionMapper;
 import com.justin.eagle.bank.rest.mappers.UserMapper;
-import com.justin.eagle.bank.transaction.TransactionCrudService;
-import com.justin.eagle.bank.user.UserCrudService;
+import com.justin.eagle.bank.transaction.TransactionService;
+import com.justin.eagle.bank.user.UserService;
 import com.justin.eagle.bank.domain.ProvisionedUser;
 import io.swagger.v3.oas.annotations.Parameter;
 import io.swagger.v3.oas.annotations.enums.ParameterIn;
@@ -48,15 +47,15 @@ public class V1ApiController implements V1Api {
     @Autowired
     private AuthenticateUserService authenticateUserService;
 
-    @Autowired UserCrudService userCrudService;
+    @Autowired UserService userService;
 
-    @Autowired AccountCrudService accountCrudService;
+    @Autowired AccountService accountService;
 
     @Autowired UserMapper userMapper;
 
     @Autowired AccountMapper accountMapper;
 
-    @Autowired TransactionCrudService transactionCrudService;
+    @Autowired TransactionService transactionService;
 
     @Autowired TransactionMapper transactionMapper;
 
@@ -68,7 +67,7 @@ public class V1ApiController implements V1Api {
             @Valid @RequestBody CreateBankAccountRequest createBankAccountRequest) {
         final String authorizedUserId = authenticateUserService.findUserIdFromAuthToken(authorization);
         PendingAccount pendingAccount = accountMapper.buildPendingAccount(authorizedUserId, createBankAccountRequest);
-        final ActiveAccount newAccount = accountCrudService.createNewAccount(pendingAccount);
+        final ActiveAccount newAccount = accountService.createNewAccount(pendingAccount);
         return new ResponseEntity<>(accountMapper.buildAccountResponse(newAccount), HttpStatus.CREATED);
     }
 
@@ -80,7 +79,7 @@ public class V1ApiController implements V1Api {
 
         final String authorizedUserId = authenticateUserService.findUserIdFromAuthToken(authorization);
         TransactionRequest request = transactionMapper.buildTransactionRequest(authorizedUserId, accountNumber, createTransactionRequest);
-        ApprovedTransaction transaction = transactionCrudService.create(request);
+        ApprovedTransaction transaction = transactionService.create(request);
         return new ResponseEntity<>(transactionMapper.buildTransactionResponse(transaction), HttpStatus.CREATED);
     }
 
@@ -88,7 +87,7 @@ public class V1ApiController implements V1Api {
     public ResponseEntity<UserResponse> createUser(@Parameter(name = "CreateUserRequest", description = "Create a new user", required = true)
     @Valid @RequestBody CreateUserRequest createUserRequest) {
 
-        final ProvisionedUser user = userCrudService.createUser(userMapper.createNewUser(createUserRequest));
+        final ProvisionedUser user = userService.createUser(userMapper.createNewUser(createUserRequest));
         return new ResponseEntity<>(userMapper.buildUserResponse(user), HttpStatus.CREATED);
     }
 
@@ -110,13 +109,22 @@ public class V1ApiController implements V1Api {
             @NotNull @Parameter(name = "Authorization", description = "Bearer JWT", required = true, in = ParameterIn.HEADER)
             @RequestHeader(value = "Authorization", required = true) String authorization) {
         final String authorizedUserId = authenticateUserService.findUserIdFromAuthToken(authorization);
-        final ActiveAccount activeAccount = accountCrudService.fetchAccountDetails(accountNumber, authorizedUserId);
+        final ActiveAccount activeAccount = accountService.fetchAccountDetails(accountNumber, authorizedUserId);
         return new ResponseEntity<>(accountMapper.buildAccountResponse(activeAccount), HttpStatus.OK);
     }
 
     @Override
-    public ResponseEntity<TransactionResponse> fetchAccountTransactionByID(String accountNumber, String transactionId) {
-        return V1Api.super.fetchAccountTransactionByID(accountNumber, transactionId);
+    public ResponseEntity<TransactionResponse> fetchAccountTransactionByID(
+            @Pattern(regexp = "^01\\d{6}$") @Parameter(name = "accountNumber", description = "Account number of the bank account", required = true, in = ParameterIn.PATH)
+            @PathVariable("accountNumber") String accountNumber,
+            @Pattern(regexp = "^tan-[A-Za-z0-9]$") @Parameter(name = "transactionId", description = "ID of the transaction", required = true, in = ParameterIn.PATH)
+            @PathVariable("transactionId") String transactionId,
+            @NotNull @Parameter(name = "Authorization", description = "Bearer JWT", required = true, in = ParameterIn.HEADER)
+            @RequestHeader(value = "Authorization", required = true) String authorization
+    ) {
+        final String authorizedUserId = authenticateUserService.findUserIdFromAuthToken(authorization);
+        final ApprovedTransaction transaction = transactionService.fetchTransaction(authorizedUserId, accountNumber, transactionId);
+        return new ResponseEntity<>(transactionMapper.buildTransactionResponse(transaction), HttpStatus.OK);
     }
 
     @Override
@@ -128,7 +136,7 @@ public class V1ApiController implements V1Api {
 
         final String authorizedUserId = authenticateUserService.authorizeRequest(userId, authorization);
 
-        return userCrudService.fetchUser(authorizedUserId)
+        return userService.fetchUser(authorizedUserId)
                 .map(userMapper::buildUserResponse)
                 .map(userResponse -> new ResponseEntity<>(userResponse, HttpStatus.OK))
                 .orElseThrow(() -> {
@@ -138,8 +146,15 @@ public class V1ApiController implements V1Api {
     }
 
     @Override
-    public ResponseEntity<ListTransactionsResponse> listAccountTransaction(String accountNumber) {
-        return V1Api.super.listAccountTransaction(accountNumber);
+    public ResponseEntity<ListTransactionsResponse> listAccountTransaction(
+            @Pattern(regexp = "^01\\d{6}$") @Parameter(name = "accountNumber", description = "Account number of the bank account", required = true, in = ParameterIn.PATH)
+            @PathVariable("accountNumber") String accountNumber,
+            @NotNull @Parameter(name = "Authorization", description = "Bearer JWT", required = true, in = ParameterIn.HEADER)
+            @RequestHeader(value = "Authorization", required = true) String authorization) {
+        final String authorizedUserId = authenticateUserService.findUserIdFromAuthToken(authorization);
+        final List<ApprovedTransaction> approvedTransactions = transactionService.fetchTransactions(authorizedUserId, accountNumber);
+
+        return new ResponseEntity<>(transactionMapper.buildListTransactionsResponse(approvedTransactions), HttpStatus.OK);
     }
 
     @Override
@@ -147,7 +162,7 @@ public class V1ApiController implements V1Api {
             @NotNull @Parameter(name = "Authorization", description = "Bearer JWT", required = true, in = ParameterIn.HEADER)
             @RequestHeader(value = "Authorization", required = true) String authorization) {
         final String authorizedUserId = authenticateUserService.findUserIdFromAuthToken(authorization);
-        final List<ActiveAccount> activeAccounts = accountCrudService.fetchAllAccountsForUser(authorizedUserId);
+        final List<ActiveAccount> activeAccounts = accountService.fetchAllAccountsForUser(authorizedUserId);
         final List<BankAccountResponse> bankAccounts = activeAccounts.stream()
                 .map(accountMapper::buildAccountResponse)
                 .toList();
